# RustPython

./: .coderabbit.yml  .cspell.json  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .mailmap  .pre-commit-config.yaml  .python-version  .travis.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.wasm  LICENSE  Lib  README.md  README_main.md  SECURITY.md  To find GCD of two numbers  azure-pipelines.yml  build.rs  build_error.txt  build_error_gnu.txt  build_error_gnu_explicit.txt  build_error_u8.txt  clib_list.txt  clib_path.txt  clib_test_all.sh  clib_test_one.sh  code-of-conduct.md  cpython_diff.py  crawl_sourcecode.py  demo.py  demo_closures.py  (+23 more)
bytecode/: Cargo.toml
bytecode/src/: bytecode.rs  lib.rs
capi/: Cargo.toml
capi/src/: bool.rs  complex.rs  error.rs  float.rs  int.rs  lib.rs  object.rs
common/: Cargo.toml  build.rs
common/src/: atomic.rs  borrow.rs  boxvec.rs  brc.rs  bytes.rs  cell.rs  cformat.rs  cmp.rs  crt_fd.rs  encodings.rs  escape.rs  fileutils.rs  float_ops.rs  format.rs  hash.rs  int.rs  lib.rs  linked_list.rs  lock.rs  macros.rs  os.rs  rc.rs  refcount.rs  safe_alloc.rs  static_cell.rs  str.rs  unicode_aliases.rs  windows.rs
common/src/lock/: cell_lock.rs  immutable_mutex.rs  thread_mutex.rs
common/src/wtf8/: core_char.rs  mod.rs
compiler/: Cargo.toml
compiler/ast/: Cargo.toml  asdl_rs.py
compiler/ast/src/: ast_gen.rs  constant.rs  impls.rs  lib.rs  unparse.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: compile.rs  error.rs  ir.rs  lib.rs  string_parser.rs  symboltable.rs  unparse.rs
compiler/core/: Cargo.toml
compiler/core/src/: bytecode.rs  error.rs  frozen.rs  instruction.rs  lib.rs  marshal.rs  mode.rs  opcode.rs  opcodes.rs  text_size.rs
compiler/literal/: Cargo.toml
compiler/literal/src/: complex.rs  escape.rs  float.rs  lib.rs
compiler/parser/: Cargo.toml  build.rs  python.lalrpop  python.rs
compiler/parser/src/: context.rs  error.rs  fstring.rs  function.rs  lexer.rs  lib.rs  mode.rs  parser.rs  peg_parser.rs  string.rs  string_parser.rs  token.rs
compiler/porcelain/: Cargo.toml
compiler/source/: Cargo.toml
compiler/source/src/: lib.rs
compiler/src/: bytecode.rs  compile.rs  error.rs  ir.rs  lib.rs  mode.rs  output_stream.rs  peephole.rs  stack_effect.rs  symboltable.rs
compiler/src/peephole/: optimizations.rs
crates/capi/: Cargo.toml  build.rs  capi_todo.md  pyo3-rustpython.config
crates/capi/.cargo/: config.toml
crates/capi/src/: lib.rs  (+43 more)
crates/common/: Cargo.toml
crates/compiler-source/: Cargo.toml
crates/derive-impl/: Cargo.toml
crates/doc/: Cargo.toml  generate.py
crates/host_env/: Cargo.toml  build.rs  clippy.toml
crates/jit/: Cargo.toml
crates/literal/: Cargo.toml
crates/macros/: Cargo.toml
crates/module_pyo3/: Cargo.toml
derive/: Cargo.toml  docs.json  docs.rsinc
derive-impl/: Cargo.toml
derive-impl/src/: compile_bytecode.rs  error.rs  from_args.rs  lib.rs  pyclass.rs  pymodule.rs  pypayload.rs  pystructseq.rs  pytrace.rs  pytraverse.rs  util.rs
derive/src/: compile_bytecode.rs  doc.rs  error.rs  from_args.rs  lib.rs  pyclass.rs  pymodule.rs  pypayload.rs  pystructseq.rs  pyvalue.rs  util.rs
jit/: Cargo.toml
jit/src/: instructions.rs  lib.rs
jit/tests/: bool_tests.rs  common.rs  float_tests.rs  int_tests.rs  lib.rs  misc_tests.rs
parser/: .gitignore  Cargo.toml  README.md  build.rs  python.lalrpop  python.rs  regen_lalrpop.sh
parser/src/: README.md  ast.rs  error.rs  fstring.rs  function.rs  lexer.rs  lib.rs  location.rs  main.rs  mode.rs  parser.rs  python.lalrpop  python.rs  string.rs  token.rs
pylib/: Cargo.toml  Lib  build.rs
pylib/Lib/: README.md  _compat_pickle.py  _dummy_os.py  _dummy_thread.py  _pydecimal.py  _pyio.py  _threading_local.py  difflib.py  hashlib.py  inspect.py  io.py  opcode.py  shutil.py  socketserver.py  timeit.py  types.py  uuid.py
pylib/src/: lib.rs
ruff_text_size/: Cargo.toml
ruff_text_size/src/: size.rs
stdlib/: Cargo.toml  build.rs  vcpkg.json
stdlib/Include/: CMakeLists.txt  _localemodule.c
stdlib/src/: _statistics.rs  array.rs  binascii.rs  bisect.rs  blake2.rs  bz2.rs  cmath.rs  compression.rs  contextvars.rs  csv.rs  datetime.rs  dis.rs  faulthandler.rs  fcntl.rs  gc.rs  grp.rs  hashlib.rs  json.rs  keyword.rs  lib.rs  locale.rs  lzma.rs  math.rs  md5.rs  mmap.rs  multiprocessing.rs  opcode.rs  openssl.rs  overlapped.rs  platform.rs  posixsubprocess.rs  pyexpat.rs  pystruct.rs  random.rs  re.rs  resource.rs  scproxy.rs  select.rs  sha1.rs  sha256.rs  (+15 more)
vm/: .gitignore  Cargo.toml  build.rs  test_all.sh
vm/Lib/: _bootstrap_external.py
vm/RustPython/: Cargo.toml
vm/docs/: notes.md  study.md
vm/pylib-crate/: Cargo.toml  Lib  build.rs
vm/src/: alloc.rs  anystr.rs  buffer.rs  builtins.rs  builtins2.rs  byte.rs  bytecode.rs  bytes_inner.rs  bytesinner.rs  byteslike.rs  callable.rs  cformat.rs  class.rs  codecs.rs  compile.rs  compiler.rs  convert.rs  corelib.rs  coroutine.rs  crt_fd.rs  descriptor.rs  dict_inner.rs  dictdatatype.rs  error.rs  eval.rs  exceptions.rs  fileutils.rs  format.rs  frame.rs  frozen.rs  function.rs  import.rs  importlib.rs  intern.rs  iter.rs  iterator.rs  lib.rs  macros.rs  objbool.rs  objclass.rs  (+44 more)
vm/sre_engine/: Cargo.toml  generate_tests.py
vm/tests/: 3.1.2.13.py  3.1.3.2.py  floats.py  function_args.py  function_nested.py  math.py  types.py
wasm/: .gitignore  .prettierrc  Cargo.toml  README.md  build.sh  index.html  release.sh  target
wasm/app/: bootstrap.js  html-console.js  index.html  index.js  package.json  webpack.config.js
wasm/demo/: .envrc  package-lock.json  package.json  webpack.config.js
wasm/example/: index.html  package.json  webpack.config.js
wasm/lib/: Cargo.toml  README.md  target
wasm/notebook/: README.md  package.json  webpack.config.js
wasm/src/: lib.rs  main.rs  wasm_builtins.rs
wasm/tests/: .gitignore  .travis-runner.sh  Pipfile  conftest.py  requirements.txt  test_demo.py  test_exec_mode.py  test_inject_module.py
wasm/wasm-unknown-test/: Cargo.toml
(+2832 files in other folders)
