[package]
name = "rustpython-bytecode"
description = "RustPython specific bytecode."
version = "0.1.2"
authors = ["RustPython Team"]
edition = "2021"
repository = "https://github.com/RustPython/RustPython"
license = "MIT"


[dependencies]
bincode = { version = "2.0.0-beta.3", default-features = false, features = ["alloc", "derive"] }
bitflags = "1.3.2"
lz4_flex = "0.9.2"
num-bigint = "0.4.3"
num-complex = "0.4.0"
itertools = "0.10.3"
bstr = "0.2.17"
