[package]
name = "rustpython-capi"
description = "CAPI for RustPython"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
malachite-bigint = { workspace = true }
rustpython-common = { workspace = true }
rustpython-vm = { workspace = true }

[lints]
workspace = true
