[package]
name = "rustpython-compiler"
description = "A usability wrapper around rustpython-parser and rustpython-compiler-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rustpython-codegen = { workspace = true }
rustpython-compiler-core = { workspace = true }
rustpython-parser = { workspace = true }

[lints]
workspace = true